--- a/src/pages/clients/Clients.module.css
+++ b/src/pages/clients/Clients.module.css
@@ -1,5 +1,6 @@
 .clients-page {
   width: 100%;
+  height: 100%;
 }
 
 .clients-page__header {
