--- a/src/pages/workoutBuilder/WorkoutBuilder.module.css
+++ b/src/pages/workoutBuilder/WorkoutBuilder.module.css
@@ -1,50 +1,46 @@
-.workout-builder {
+.workout-page {
   display: flex;
   flex-direction: column;
-  flex: 1;
+  width: 100%;
 }
 
-.workout-builder__controls {
+.workout-page__header {
   display: flex;
   margin-top: 1rem;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   margin-bottom: 1rem;
+  gap: 1rem;
 }
 
-.workout-builder__controls-input-wrapper {
+.workout-page__header :nth-child(1) {
   display: flex;
-  gap: 0.5rem;
-  align-items: center;
+  gap: 1rem;
 }
 
-.workout-builder__exercise-list {
+.workout-page__header :nth-child(2) {
   display: flex;
-  flex-direction: row;
+  gap: 1rem;
 }
 
-.workout__table {
+.workout-page__exercise-list {
+}
+
+/* workout table */
+
+.workout-page__table {
   width: 100%;
+  overflow-x: auto;
   border: none;
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-.workout__table thead {
-  background-color: var(--color-gray-light);
-}
-
-.workout__table td {
-  border-bottom: 1px solid var(--color-gray-medium);
-}
-
-.workout__table th,
-.workout__table td {
-  padding: var(--space-lg);
-}
-
-.workout__table th {
-  font-weight: 600;
+.workout-page__table thead {
+  text-align: left;
+  background-color: var(--color-black);
+  color: var(--color-white);
 }
 
 .exercise-not-found-error {
